# memo

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  render.yaml
.github/workflows/: ci.yml
app/: __init__.py  config.py  models.py
app/arbitrator/: __init__.py  conflict.py
app/core/: __init__.py  embedder.py  llm_factory.py  prompt_loader.py  snapshot_cache.py
app/entity/: __init__.py  resolver.py
app/lifecycle/: __init__.py  decay.py  staleness.py
app/memories/: __init__.py  episodic.py  procedural.py  reflective.py  semantic.py  working.py
app/orchestrator/: __init__.py  graph.py
app/pattern/: __init__.py  miner.py  signals.py
app/recall/: __init__.py  reranker.py  router.py  signals.py
app/reflection/: __init__.py  workers.py
app/storage/: __init__.py  base.py  chroma_store.py  fs_cold.py  fts_store.py  nx_graph.py  pg_store.py  sqlite_store.py
app/utils/: cost_meter.py  logger.py  metrics.py  prometheus.py  token_meter.py  tokenizer.py  trace_context.py
arbitrator_eval/: build_dataset_v1.py  dataset_v1.jsonl  run_eval.py
arbitrator_eval/reports/: accuracy.json  accuracy.md  stability.json  stability.md
bench/: bench_recall.py
bench/reports/: bench_report.json  bench_report.md
demo/: chat_agent.py  chat_demo.py  chat_interactive.py  chat_test.py
docs/: ARBITRATOR_EVAL.md  BENCHMARK.md  INTERVIEW_NOTES.md  MCP_MEMORY_FRAMEWORKS_COMPARISON.md  MEMORY_FRAMEWORK_DESIGN_REVIEW.md  OBSERVABILITY.md  PG_STORE.md  RECALL_WEIGHT_ABLATION.md  RERANKER_ABLATION.md  TEST_SCENARIOS.md
eval/: grid_search.py  metrics.py  run_recall.py  runner.py
eval/datasets/: README.md  build_zh_v1.py  memocortex_zh_v1.jsonl
eval/reports/: ablation_single_axis.md  baseline_default_weights.json  baseline_default_weights.md  grid_search_artifacts.json  grid_search_results.md  reranker_enabled.json  reranker_enabled.md
mcp_server/: __init__.py  server.py
prompts/arbitrator/: v1.yaml
tests/: README.md  conftest.py
tests/integration/: conftest.py  test_arbitrator_dataset.py  test_arbitrator_live.py  test_dual_write_consistency.py  test_eval_dataset.py  test_orchestrator_e2e.py  test_pg_metadata_contract.py  test_storage_protocol.py
tests/unit/: test_arbitrator_fallback.py  test_cost_meter.py  test_effective_strength.py  test_eval_metrics.py  test_eval_runner.py  test_models.py  test_pattern_miner_grouping.py  test_prometheus.py  test_prompt_loader.py  test_recall_signals.py  test_reranker.py  test_snapshot_cache.py  test_trace_context.py
